--- a/views/includes/menu.ejs
+++ b/views/includes/menu.ejs
@@ -5,8 +5,8 @@
 					<p>Chat</p>
 					<span class="users-on spanabble"></span>
 				</div>
-				<div class="layer-2">
-					<i class="fa fa-times" aria-hidden="true"></i>
+				<div class="layer-2" onclick="toggle_menu()">
+					<i class="fa fa-times no-mobile" aria-hidden="true"></i>
 				</div>
 			</div>
 
@@ -14,12 +14,30 @@
 				<div class="peoples">
 					<p class="ons-agora">ONLINE AGORA</p>
 					<div class="peoples-timeline">
-						<div class="people">
-							<span class="status-active"></span>
-							<p class="name">Junior Bot</p>
-							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Logo_wikibot.svg/1024px-Logo_wikibot.svg.png" alt="" class="my-icon">
-						</div>
+						<div class="people" id="junior-bot-user">
+			              <span class="status-active"></span>
+			              <p class="name">Junior Bot</p>
+			              <img src="src/images/junior.png" alt="" class="my-icon">
+			              <div class="user-message">
+			              	<span class="arrow-user"></span>
+			              	<div class="text-user">Diz oi pra mim</div>
+			              </div>
+			            </div>
 					</div>
+				</div>
+				<a href="./bots" class="ons-agora" target="__blank" style="text-decoration:none">ROBOS ONLINES</a>
+				<div class="bots-ons">
+				  <% bots.forEach(function(bot){ %>
+				  	<a href="./bot/<%- bot.id -%>" target="__blank">
+					  	<span class="on-bot">
+					  	  	<% if(bot.icon){ %>
+							   <img src="<%- bot.icon -%>" style="width:30px;height:30px;border-radius:100%">
+							 <% } else{ %>  
+							   <img src="src/images/new-bot-user.png" style="width:30px;height:30px;border-radius:100%">
+							<% } %>
+						</span>
+					</a>
+				  <% }); %>
 				</div>
 			</div>
 		</div>
