--- a/views/includes/timeline.ejs
+++ b/views/includes/timeline.ejs
@@ -1,28 +1,46 @@
 <div class="timeline">
-			<div class="head">
+		<div class="head">
 				<div class="item">
-					Linguagem: 
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/Flag_of_Brazil.svg/2000px-Flag_of_Brazil.svg.png" alt="" class="band">
+					<p class="no-mobile">Linguagem:</p> 
+					<img src="src/images/br-lang.png" alt="" class="band">
 				</div>
 				<div class="item">
 					<i class="fa fa-comments" aria-hidden="true"></i>
-					<p>Chat</p>
+					<p class="no-mobile">Chat</p>
 					<span class="spanabble messages-number"></span>
 				</div>
 				<div class="item logout" style="cursor:pointer">
-					<p>Sair</p>
+					<p class="no-mobile">Sair</p>
 					<i class="fa fa-sign-out" aria-hidden="true"></i>
 				</div>
 			</div>
 
-			<div class="messages"></div>
-
-			<div class="emit">
-				<div class="caixa">
-					<i class="fa fa-paperclip" aria-hidden="true"></i>
-					<input type="text" class="emit-message" placeholder="Envie sua mensagem">
-					<i class="fa fa-comments-o" aria-hidden="true"></i>
+			<div class="messages">
+				<div class="mobile menu-toggle">
+					<i class="fa fa-bars fa-lg" style="display:none" aria-hidden="true"></i>
+				</div>
+				<div class="commands">
+					<i class="fa fa-file-video-o fa-lg video-up" aria-hidden="true"></i>
+					<i class="fa fa-file-audio-o fa-lg audio-up" aria-hidden="true"></i>
+					<i class="fa fa-file-code-o fa-lg code-up" aria-hidden="true"></i>
+					<i class="fa fa-file-image-o fa-lg image-up" aria-hidden="true"></i>
+					<i class="fa fa-info-circle help-chat" aria-hidden="true"></i>
+				</div>
+				<div class="emojis"></div>
+				<div class="luz">
+					<div class="luz-conteudo"></div>
+					<div class="luz-btn">
+						<button class="btn-link luz-btn" onclick="acender_luz()">Acender Luz</button>
+					</div>
 				</div>
 			</div>
 
+			<div class="emit">
+				<div class="caixa">
+					<i class="fa fa-paperclip open-commands" aria-hidden="true"></i>
+					<input type="text" class="emit-message" placeholder="Envie sua mensagem">
+				<i class="fa fa-comments-o open-emoji" aria-hidden="true"></i>
+			</div>
 		</div>
+
+	</div>
