--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,16 +2,22 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>KhanChat</title>
-	<link rel="shootcut icon" href="https://avatars0.githubusercontent.com/u/29682878?s=460&v=4">
+	<link rel="shootcut icon" href="src/images/icon.png">
+	<link rel="stylesheet" href="src/css/min/login-mobile.css">
 	<link rel="stylesheet" href="src/css/min/login.css">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
 
-	<% include includes/login.ejs %>
-	<% include includes/copyright.ejs %>
-
+	<div class="container">
+		<% include includes/login.ejs %>
+		<% include includes/copyright.ejs %>
+	</div>
+	
+	<script src="src/js/min/jquery.js"></script>
+	<script src="src/js/min/electron.js"></script>
 	<script src="src/js/min/login.js"></script>
 
 </body>
