--- a/views/includes/timeline.ejs
+++ b/views/includes/timeline.ejs
@@ -2,7 +2,7 @@
 		<div class="head">
 				<div class="item">
 					<p class="no-mobile">Linguagem:</p> 
-					<img src="src/images/br-lang.png" alt="" class="band">
+					<img src="<%- url -%>/src/images/br-lang.png" alt="" class="band">
 				</div>
 				<div class="item">
 					<i class="fa fa-comments" aria-hidden="true"></i>
