--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 	<link rel="shootcut icon" href="src/images/icon.png">
 	<link rel="stylesheet" href="src/css/min/login-mobile.css">
 	<link rel="stylesheet" href="src/css/min/login.css">
-	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+	<link rel="stylesheet" href="src/css/min/bootstrap.css">
 </head>
 <body>
 
