--- a/views/room.ejs
+++ b/views/room.ejs
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>KhanChat</title>
-	<link rel="shootcut icon" href="src/images/icon.png">
-	<link rel="stylesheet" href="src/css/min/painel.css">
-	<link rel="stylesheet" href="src/css/min/emojione.css">
+	<link rel="shootcut icon" href="<%- url -%>/src/images/icon.png">
+	<link rel="stylesheet" href="<%- url -%>/src/css/min/painel.css">
+	<link rel="stylesheet" href="<%- url -%>/src/css/min/emojione.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet" href="src/css/min/menu.css">
-	<link rel="stylesheet" href="src/css/min/mobile.css">
-	<link rel="stylesheet" href="src/css/min/font-awesome.css">
+	<link rel="stylesheet" href="<%- url -%>/src/css/min/menu.css">
+	<link rel="stylesheet" href="<%- url -%>/src/css/min/mobile.css">
+	<link rel="stylesheet" href="<%- url -%>/src/css/min/font-awesome.css">
 </head>
 <body>
 
@@ -19,18 +19,20 @@
 		<% include includes/menu.ejs %>
 	</div>
 	
-	<script src="../socket.io/socket.io.js"></script>
-	<script src="src/js/min/emojione.js"></script>
-	<script src="src/js/min/lodash.js"></script>
-	<script src="src/js/min/jquery.js"></script>
-	<script src="src/js/min/electron.js"></script>
-	<script src="src/js/min/chat.js"></script>
+	<script src="<%- url -%>/socket.io/socket.io.js"></script>
+	<script src="<%- url -%>/src/js/min/emojione.js"></script>
+	<script src="<%- url -%>/src/js/min/clipboard.js"></script>
+	<script src="<%- url -%>/src/js/min/jquery.js"></script>
+	<script src="<%- url -%>/src/js/min/electron.js"></script>
+	<script src="<%- url -%>/src/js/min/chat.js"></script>
 	<script>
 
 		const socket = io();
 		const user = <%- user -%>;
-		// Template
+		// Template 
 		const chat = {
+			'url': "<%- url -%>/",
+			'sala': "sala-<%- sala -%>-",
 			'peoples': 1,
 			'messages': 0,
 			'peoples_add': ['Junior Bot'],
@@ -40,7 +42,7 @@
 		};
 
 	</script>
-	<script src="src/js/min/app.js"></script>
+	<script src="<%- url -%>/src/js/min/app.js"></script>
 
 </body>
 </html>
