--- a/public/src/sass/menu.scss
+++ b/public/src/sass/menu.scss
@@ -1,132 +1,3 @@
-<<<<<<< HEAD
-/* TWO PART */
-div {
-	&::-webkit-scrollbar-track {
-		-webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-		background-color: #ecf0f1;
-	}
-	&::-webkit-scrollbar {
-		width: 12px;
-		background-color: #F5F5F5;
-	}
-	&::-webkit-scrollbar-thumb {
-		-webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-		background-color: #263443;
-	}
-}
-.menu {
-	width: 30%;
-	height: 100%;
-	background: #2c3e50;
-	font-family: 'Roboto', sans-serif;
-	>.one {
-		height: 15vh;
-		width: 100%;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		color: #bdc3c7d4 !important;
-	}
-	.layer-1 {
-		height: 100%;
-		width: 50%;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		>* {
-			margin-left: 10px;
-		}
-	}
-	.layer-2 {
-		height: 100%;
-		width: 50%;
-		display: flex;
-		align-items: center;
-		justify-content: flex-end;
-		>* {
-			margin-right: 25px;
-			cursor: pointer;
-		}
-	}
-}
-.one {
-	background: #34495e;
-}
-.spanabble {
-	background: #2ecc71;
-	color: white;
-	padding: 3px 8px 3px;
-	border-radius: 10px;
-}
-.two {
-	height: 85vh;
-}
-.peoples {
-	width: 100%;
-	height: 83%;
-}
-.peoples-timeline {
-	width: 100%;
-	height: 83%;
-	overflow-y: scroll;
-	.people {
-		&:hover {
-			transition: all 1s ease;
-			background: rgba(255, 255, 255, .4);
-		}
-	}
-}
-.ons-agora {
-	color: #bdc3c7d4;
-	padding: 35px;
-	font-size: 15px;
-}
-.people {
-	width: 90%;
-	height: 5vh;
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-	margin: 0 auto;
-	margin-top: 10px;
-	font-size: 16px;
-	>* {
-		margin-left: 10px;
-		color: #ecf0f1cc;
-		cursor: pointer;
-		transition: all 1s ease;
-	}
-	>.my-icon {
-		width: 30px;
-		height: 31px;
-		border-radius: 100%;
-	}
-}
-.status-active {
-	background: #27ae60;
-	width: 10px;
-	height: 10px;
-	border-radius: 100%;
-}
-.bots-ons {
-	padding: 15px;
-	width: 91%;
-	overflow-x: scroll;
-	display: flex;
-	align-items: center;
-	margin-top: 10px;
-}
-.on-bot {
-	margin-left: 5px;
-	margin-right: 5px;
-	transition: all 1.5s ease;
-	border-bottom: 3px solid transparent;
-	&:hover {
-		transition: all 1.5s ease;
-		border-bottom: 3px solid #2ecc71;
-		cursor: pointer;
-	}
-=======
 /* TWO PART */
 $box-flat-1: 0 3px 6px rgba(0,0,0,.16), 0 3px 6px rgba(0,0,0,.23);
 
@@ -235,22 +106,32 @@ div {
 		border: none;
 		color: white;
 		margin-left: 20px;
-		transition: all 1s ease;
+		transition: all .5s ease-in;
 		cursor: pointer;
 		outline: none;
 		&:hover{
-			transition: all 1s ease;
+			transition: all .5s ease-in;
 			box-shadow: $box-flat-1;
+			transform: rotate(-90deg);
+			color: #313638;
+		}
+		&:hover &>i{
+			color: red;
 		}
 	}
+
 	.sala-name{
-		width: 70%;
+		width: 67%;
 		height: 50px;
 		border: none;
-		padding-left: 10px;
-		border-radius: 3px;
+		padding-left: 20px;
+		border-radius: 15px;
 		margin-left: 10px;
+		font-size: 17px;
+		outline: none;
+		font-family: 'Raleway', sans-serif;
 	}
+
 }
 
 .ons-agora {
@@ -303,5 +184,4 @@ div {
 		border-bottom: 3px solid #2ecc71;
 		cursor: pointer;
 	}
->>>>>>> 837f5ca07b1d8f9fbefac2cd9301058fe174b4cd
 }
