--- a/views/bots.ejs
+++ b/views/bots.ejs
@@ -8,40 +8,60 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>	
+	
+	<div class="view">
 
-	<div class="app view">
-		<div class="box">
-			<div class="card" style="width: 20rem;height:70vh;" v-for="bot in bots" v-if="!bot.visible">
-				<img class="card-img-top" :src="bot.icon" v-if="bot.icon">
-				<img class="card-img-top" src="../src/images/new-bot-user.png" v-else>
-				<div class="card-block">
-					<h4 class="card-title">Bot: {{ bot.nome }}</h4>
-					<p class="card-text" style="font-size:15px" v-if="bot.desc">{{ bot.desc }}</p>
-					<p class="card-text" style="font-size:15px" v-else>{{ bot.nome }} Está sem nenhuma descrição.</p>
-					<ul class="list-group list-group-flush">
-						<li class="list-group-item" v-if="bot.on"> 
-							Cluster: Online <span class="on"></span>
-						</li>
-						<li class="list-group-item" v-else>
-							Cluster: Offline <span class="off"></span>
-						</li>
-						<li class="list-group-item">
-							Tamanho: <code> {{ bot.size }} kb</code>
-						</li>
-						<li class="list-group-item">
-							Eventos: <code>[{{bot.eventos}}];</code>
-						</li>
-					</ul>
-					<div class="card-block">
-						<a :href="bot.url" class="card-link" target="__blank">Minha Pagina</a>
-					</div>
-				</div>
-			</div>
+		<div class="box" khan-controller="index">
+			{{ $bots.map((bot) => (!bot.visible) ? $makeBot(bot) : '').join('') }}
 		</div>
+
 	</div>
 
-	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+	<script src="../src/js/khan-framework.js"></script>
 	<script src="../src/js/min/bots.js"></script>
+	<script>
+
+		const App = khanApp.create();
+
+		App.$controller('index', function($scope){
+
+		    this.bots = bots;
+		    this.makeBot = function(bot){
+		    	return `
+					<div class="card" style="width: 20rem;height:70vh;">
+						<img class="card-img-top" src="${ bot.icon || "../src/images/new-bot-user.png" }">
+						<div class="card-block">
+							<h4 class="card-title">Bot: ${ bot.nome }</h4>
+							<p class="card-text" style="font-size:15px">
+								${ bot.desc || bot.nome + " nao tem descrição." }
+							</p>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item"> 
+									${
+										(bot.on) 
+										? 'Cluster: Online <span class="on"></span>'
+										: 'Cluster: Offline <span class="off"></span>'
+									}
+								</li>
+								<li class="list-group-item">
+									Tamanho: <code> ${ bot.size } kb</code>
+								</li>
+								<li class="list-group-item">
+									Eventos: <code>[${bot.eventos}];</code>
+								</li>
+							</ul>
+							<div class="card-block">
+								<a href="${bot.url}" class="card-link" target="__blank">Minha Pagina</a>
+							</div>
+						</div>
+					</div>
+		    	`;
+		    };
+		  
+		});
+
+	</script>
+
 
 </body>
 </html>
