--- a/views/includes/viewbot.ejs
+++ b/views/includes/viewbot.ejs
@@ -11,31 +11,8 @@
 <body>
 	
 	<div class="app view-bot">
-			<div class="card" style="width: 20rem;height:70vh;">
-				<img class="card-img-top" :src="bot.icon" v-if="bot.icon">
-				<img class="card-img-top" src="../src/images/new-bot-user.png" v-else>
-				<div class="card-block">
-					<h4 class="card-title">Bot: {{ bot.nome }}</h4>
-					<p class="card-text" style="font-size:15px" v-if="bot.desc">{{ bot.desc }}</p>
-					<p class="card-text" style="font-size:15px" v-else>{{ bot.nome }} Está sem nenhuma descrição.</p>
-					<ul class="list-group list-group-flush">
-						<li class="list-group-item" v-if="bot.on"> 
-							Cluster: Online <span class="on"></span>
-						</li>
-						<li class="list-group-item" v-else>
-							Cluster: Offline <span class="off"></span>
-						</li>
-						<li class="list-group-item">
-							Tamanho: <code> {{ bot.size }} kb</code>
-						</li>
-						<li class="list-group-item">
-							Eventos: <code>[{{bot.eventos}}];</code>
-						</li>
-					</ul>
-					<div class="card-block">
-						<a href="../bots" class="card-link" target="__blank">Voltar Para Menu</a>
-					</div>
-				</div>
+			<div class="box" khan-controller="index" style="overflow:hidden">
+				{{ $bots.map((bot) => (!bot.visible) ? $makeBot(bot) : '').join('') }}
 			</div>
 			<div class="code">
 				<pre><code class="language-javascript"><%- code -%></code></pre>
@@ -44,10 +21,54 @@
 
 	<script>
 		var id = <%- id -%>;
+		id = (id === 0) ? "0" : id;
 	</script>
-	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+	<script src="../src/js/khan-framework.js"></script>
 	<script src="../src/js/min/bots.js"></script>
 	<script src="https://cdn.jsdelivr.net/prism/1.6.0/prism.js"></script>
+	<script>
+
+		const App = khanApp.create();
+
+		App.$controller('index', function($scope){
+
+			console.log(bots[id]);
+		    this.bots = [bots[id]];
+		    this.makeBot = function(bot){
+		    	return `
+					<div class="card" style="width: 20rem;height:70vh;">
+						<img class="card-img-top" src="${ bot.icon || "../src/images/new-bot-user.png" }">
+						<div class="card-block">
+							<h4 class="card-title">Bot: ${ bot.nome }</h4>
+							<p class="card-text" style="font-size:15px">
+								${ bot.desc || bot.nome + " nao tem descrição." }
+							</p>
+							<ul class="list-group list-group-flush">
+								<li class="list-group-item"> 
+									${
+										(bot.on) 
+										? 'Cluster: Online <span class="on"></span>'
+										: 'Cluster: Offline <span class="off"></span>'
+									}
+								</li>
+								<li class="list-group-item">
+									Tamanho: <code> ${ bot.size } kb</code>
+								</li>
+								<li class="list-group-item">
+									Eventos: <code>[${bot.eventos}];</code>
+								</li>
+							</ul>
+							<div class="card-block">
+								<a href="../bots" class="card-link" target="__blank">Voltar ao menu</a>
+							</div>
+						</div>
+					</div>
+		    	`;
+		    };
+		  
+		});
+
+	</script>
 	
 </body>
 </html>
