--- a/app/views/room.ejs
+++ b/app/views/room.ejs
@@ -76,7 +76,7 @@
 	</script>
 
   <script src="<%- url -%>/src/js/vue.js"></script>
-	<script src="<%- url -%>/src/js/min/app.js"></script>
+	<script src="<%- url -%>/src/js/min/app.js?version=<%- Math.floor(Math.random() * 100000) -%>"></script>
 
 </body>
 </html>
